fix project modal button alignment

--- a/portfolio/src/styles/ProjectModal.css
+++ b/portfolio/src/styles/ProjectModal.css
@@ -22,19 +22,24 @@
     border-radius: 10px;
 }
 
+.project-title-container {
+    display: inline;
+    margin-right: 1rem;
+}
+
 .project-title {
     display: inline;
 }
 
 .badge-container {
     display: inline;
-    margin-left: 1.5rem;
+    white-space: nowrap;
     vertical-align: top;
 }
 
 .badges-btn {
     background-color: #ebebeb;
-    margin: 0 5px 0 5px;
+    margin: 3px 10px 0 0;
     padding: 5px 15px;
     display: inline-block;
     color: #636363;
